{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 322,
  "lineage": "b3caed45-19fe-c607-966e-d21709f65e1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mkahn_eip_ins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0534e5651ed424292",
            "domain": "vpc",
            "id": "eipalloc-0298338190acd22ad",
            "instance": "i-02502459b3fa9465c",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0c6d795ad93619d7a",
            "private_dns": "ip-192-168-1-11.ap-northeast-2.compute.internal",
            "private_ip": "192.168.1.11",
            "public_dns": "ec2-15-165-186-138.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.186.138",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.mkahn_vpc",
            "aws_instance.web_a1",
            "aws_security_group.mkahn_allow_http",
            "aws_subnet.mkahn_puba"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mkahn_eip_ins2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06763638828030c53",
            "domain": "vpc",
            "id": "eipalloc-020b0e5e7143e6b8f",
            "instance": "i-0635a7f9b1fa907a2",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0341527b40f071bb1",
            "private_dns": "ip-192-168-1-12.ap-northeast-2.compute.internal",
            "private_ip": "192.168.1.12",
            "public_dns": "ec2-3-35-144-62.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.144.62",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.mkahn_puba",
            "aws_vpc.mkahn_vpc",
            "aws_instance.web_a2",
            "aws_security_group.mkahn_allow_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mkahn_eip_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0279619babf8e6e98",
            "domain": "vpc",
            "id": "eipalloc-064e1617943f3bb5e",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-08e67492a7eadf157",
            "private_dns": "ip-192-168-1-170.ap-northeast-2.compute.internal",
            "private_ip": "192.168.1.170",
            "public_dns": "ec2-3-38-20-254.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.20.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mkahn_eip_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d5b7b7160690dc95",
            "domain": "vpc",
            "id": "eipalloc-0d27bdedcef12deda",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0ee07a1a39a5a98f8",
            "private_dns": "ip-192-168-2-115.ap-northeast-2.compute.internal",
            "private_ip": "192.168.2.115",
            "public_dns": "ec2-15-165-213-149.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.213.149",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4a9ad2eb120e054",
            "arn": "arn:aws:ec2:ap-northeast-2:806117842904:instance/i-02502459b3fa9465c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02502459b3fa9465c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c6d795ad93619d7a",
            "private_dns": "ip-192-168-1-11.ap-northeast-2.compute.internal",
            "private_ip": "192.168.1.11",
            "public_ip": "15.165.186.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-086dacf586e09fcd8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f3926896f9cbd20",
            "tags": {
              "Name": "web-a1"
            },
            "tags_all": {
              "Name": "web-a1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b88bc2eab0c3e960"
            ]
          },
          "dependencies": [
            "aws_vpc.mkahn_vpc",
            "aws_security_group.mkahn_allow_http",
            "aws_subnet.mkahn_puba"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4a9ad2eb120e054",
            "arn": "arn:aws:ec2:ap-northeast-2:806117842904:instance/i-0635a7f9b1fa907a2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0635a7f9b1fa907a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0341527b40f071bb1",
            "private_dns": "ip-192-168-1-12.ap-northeast-2.compute.internal",
            "private_ip": "192.168.1.12",
            "public_ip": "3.35.144.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ed0239feabaab300",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f3926896f9cbd20",
            "tags": {
              "Name": "web-a2"
            },
            "tags_all": {
              "Name": "web-a2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b88bc2eab0c3e960"
            ]
          },
          "dependencies": [
            "aws_security_group.mkahn_allow_http",
            "aws_subnet.mkahn_puba",
            "aws_vpc.mkahn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mkahn-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:806117842904:internet-gateway/igw-0fc4dcd1b7d8c9e2f",
            "id": "igw-0fc4dcd1b7d8c9e2f",
            "owner_id": "806117842904",
            "tags": {
              "Name": "mkahn-ig"
            },
            "tags_all": {
              "Name": "mkahn-ig"
            },
            "vpc_id": "vpc-014c34eb38adec14c"
          },
          "dependencies": [
            "aws_vpc.mkahn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mkahn_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:806117842904:loadbalancer/app/mkahn-lb/aa91aea50f54c084",
            "arn_suffix": "app/mkahn-lb/aa91aea50f54c084",
            "dns_name": "mkahn-lb-140943308.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:806117842904:loadbalancer/app/mkahn-lb/aa91aea50f54c084",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mkahn-lb",
            "security_groups": [
              "sg-0b88bc2eab0c3e960"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07f3926896f9cbd20"
              },
              {
                "subnet_id": "subnet-0cb7d73f8c9061b3f"
              }
            ],
            "subnets": [
              "subnet-07f3926896f9cbd20",
              "subnet-0cb7d73f8c9061b3f"
            ],
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "vpc_id": "vpc-014c34eb38adec14c",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.mkahn_allow_http",
            "aws_subnet.mkahn_puba",
            "aws_subnet.mkahn_pubc",
            "aws_vpc.mkahn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mkahn_lb_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:806117842904:listener/app/mkahn-lb/aa91aea50f54c084/13adc0539e3c05d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:806117842904:targetgroup/mkahn-lb-tg/c8e58c8f54ed6b54",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:806117842904:listener/app/mkahn-lb/aa91aea50f54c084/13adc0539e3c05d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:806117842904:loadbalancer/app/mkahn-lb/aa91aea50f54c084",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.mkahn_lb_tg",
            "aws_security_group.mkahn_allow_http",
            "aws_subnet.mkahn_puba",
            "aws_subnet.mkahn_pubc",
            "aws_vpc.mkahn_vpc",
            "aws_lb.mkahn_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mkahn_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:806117842904:targetgroup/mkahn-lb-tg/c8e58c8f54ed6b54",
            "arn_suffix": "targetgroup/mkahn-lb-tg/c8e58c8f54ed6b54",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:806117842904:targetgroup/mkahn-lb-tg/c8e58c8f54ed6b54",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mkahn-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-014c34eb38adec14c"
          },
          "dependencies": [
            "aws_vpc.mkahn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mkahn_tg-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:806117842904:targetgroup/mkahn-lb-tg/c8e58c8f54ed6b54-20211018112628592200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:806117842904:targetgroup/mkahn-lb-tg/c8e58c8f54ed6b54",
            "target_id": "192.168.1.11"
          },
          "dependencies": [
            "aws_lb_target_group.mkahn_lb_tg",
            "data.aws_instances.web_a1_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mkahn_ngw_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064e1617943f3bb5e",
            "connectivity_type": "public",
            "id": "nat-0cf40e225565c1bb4",
            "network_interface_id": "eni-08e67492a7eadf157",
            "private_ip": "192.168.1.170",
            "public_ip": "3.38.20.254",
            "subnet_id": "subnet-07f3926896f9cbd20",
            "tags": {
              "Name": "mkahn-ngw-pria"
            },
            "tags_all": {
              "Name": "mkahn-ngw-pria"
            }
          },
          "dependencies": [
            "aws_subnet.mkahn_puba",
            "aws_vpc.mkahn_vpc",
            "aws_eip.mkahn_eip_pria"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mkahn_ngw_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d27bdedcef12deda",
            "connectivity_type": "public",
            "id": "nat-044674c4087ff9652",
            "network_interface_id": "eni-0ee07a1a39a5a98f8",
            "private_ip": "192.168.2.115",
            "public_ip": "15.165.213.149",
            "subnet_id": "subnet-0cb7d73f8c9061b3f",
            "tags": {
              "Name": "mkahn-ngw-pria"
            },
            "tags_all": {
              "Name": "mkahn-ngw-pria"
            }
          },
          "dependencies": [
            "aws_subnet.mkahn_pubc",
            "aws_vpc.mkahn_vpc",
            "aws_eip.mkahn_eip_pric"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mkahn-natrt_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:806117842904:route-table/rtb-086df4fc7b664164c",
            "id": "rtb-086df4fc7b664164c",
            "owner_id": "806117842904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cf40e225565c1bb4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mkahn-natrt-pria"
            },
            "tags_all": {
              "Name": "mkahn-natrt-pria"
            },
            "timeouts": null,
            "vpc_id": "vpc-014c34eb38adec14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.mkahn_ngw_pria",
            "aws_vpc.mkahn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mkahn-natrt_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:806117842904:route-table/rtb-0dd602970769180b2",
            "id": "rtb-0dd602970769180b2",
            "owner_id": "806117842904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-044674c4087ff9652",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mkahn-natrt-pric"
            },
            "tags_all": {
              "Name": "mkahn-natrt-pric"
            },
            "timeouts": null,
            "vpc_id": "vpc-014c34eb38adec14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.mkahn_ngw_pric",
            "aws_vpc.mkahn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mkahn-pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:806117842904:route-table/rtb-0b89e10271341f5c7",
            "id": "rtb-0b89e10271341f5c7",
            "owner_id": "806117842904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc4dcd1b7d8c9e2f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mkahn-pubrt"
            },
            "tags_all": {
              "Name": "mkahn-pubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-014c34eb38adec14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mkahn-ig",
            "aws_vpc.mkahn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mkahn-pria-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac3afb9dd01dd8aa",
            "route_table_id": "rtb-086df4fc7b664164c",
            "subnet_id": "subnet-048177aa0ac1271ae"
          },
          "dependencies": [
            "aws_eip.mkahn_eip_pria",
            "aws_nat_gateway.mkahn_ngw_pria",
            "aws_route_table.mkahn-natrt_pria",
            "aws_subnet.mkahn_pria",
            "aws_subnet.mkahn_puba",
            "aws_vpc.mkahn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mkahn-pric-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab1fbad8c6c55412",
            "route_table_id": "rtb-0dd602970769180b2",
            "subnet_id": "subnet-045af708bc0094067"
          },
          "dependencies": [
            "aws_subnet.mkahn_pric",
            "aws_subnet.mkahn_pubc",
            "aws_vpc.mkahn_vpc",
            "aws_eip.mkahn_eip_pric",
            "aws_nat_gateway.mkahn_ngw_pric",
            "aws_route_table.mkahn-natrt_pric"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mkahn-puba-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e17cce995890dbd1",
            "route_table_id": "rtb-0b89e10271341f5c7",
            "subnet_id": "subnet-07f3926896f9cbd20"
          },
          "dependencies": [
            "aws_internet_gateway.mkahn-ig",
            "aws_route_table.mkahn-pubrt",
            "aws_subnet.mkahn_puba",
            "aws_vpc.mkahn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mkahn-pubc-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2b2ac0c66250348",
            "route_table_id": "rtb-0b89e10271341f5c7",
            "subnet_id": "subnet-0cb7d73f8c9061b3f"
          },
          "dependencies": [
            "aws_internet_gateway.mkahn-ig",
            "aws_route_table.mkahn-pubrt",
            "aws_subnet.mkahn_pubc",
            "aws_vpc.mkahn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mkahn_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:806117842904:security-group/sg-0b88bc2eab0c3e960",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b88bc2eab0c3e960",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "806117842904",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mkahn-allow-http"
            },
            "tags_all": {
              "Name": "mkahn-allow-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-014c34eb38adec14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mkahn_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mkahn_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:806117842904:subnet/subnet-048177aa0ac1271ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-048177aa0ac1271ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "806117842904",
            "tags": {
              "Name": "pri-a"
            },
            "tags_all": {
              "Name": "pri-a"
            },
            "vpc_id": "vpc-014c34eb38adec14c"
          },
          "dependencies": [
            "aws_vpc.mkahn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mkahn_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:806117842904:subnet/subnet-045af708bc0094067",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-045af708bc0094067",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "806117842904",
            "tags": {
              "Name": "pri-c"
            },
            "tags_all": {
              "Name": "pri-c"
            },
            "vpc_id": "vpc-014c34eb38adec14c"
          },
          "dependencies": [
            "aws_vpc.mkahn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mkahn_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:806117842904:subnet/subnet-07f3926896f9cbd20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-07f3926896f9cbd20",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "806117842904",
            "tags": {
              "Name": "pub-a"
            },
            "tags_all": {
              "Name": "pub-a"
            },
            "vpc_id": "vpc-014c34eb38adec14c"
          },
          "dependencies": [
            "aws_vpc.mkahn_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mkahn_pubc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:806117842904:subnet/subnet-0cb7d73f8c9061b3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0cb7d73f8c9061b3f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "806117842904",
            "tags": {
              "Name": "pub-c"
            },
            "tags_all": {
              "Name": "pub-c"
            },
            "vpc_id": "vpc-014c34eb38adec14c"
          },
          "dependencies": [
            "aws_vpc.mkahn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mkahn_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:806117842904:vpc/vpc-014c34eb38adec14c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-003715f46a147cfe9",
            "default_route_table_id": "rtb-0af89df36dfaa3362",
            "default_security_group_id": "sg-0ffaff4d3b3ec516d",
            "dhcp_options_id": "dopt-f722609c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-014c34eb38adec14c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0af89df36dfaa3362",
            "owner_id": "806117842904",
            "tags": {
              "name": "mkahn-vpc"
            },
            "tags_all": {
              "name": "mkahn-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}